Bio module config

--- a/web-portfolio-2024/src/app/main-page/bio/bio.component.html
+++ b/web-portfolio-2024/src/app/main-page/bio/bio.component.html
@@ -1,1 +1,17 @@
-<p>bio works!</p>
+
+<section id="bio">
+
+  <mat-grid-list
+    class="{{columnCount == 1 ? 'single-column' : ''}}"
+    cols="{{columnCount}}"
+    rowHeight="2:1">
+
+    <mat-grid-tile>
+      <img
+        src="/assets/hillpicture.jpg"
+        alt="Ben sat on a small hill with his dog" />
+    </mat-grid-tile>
+
+  </mat-grid-list>
+
+</section>
