--- a/web-portfolio-2024/src/app/main-page/bio/bio.component.html
+++ b/web-portfolio-2024/src/app/main-page/bio/bio.component.html
@@ -6,10 +6,16 @@
     cols="{{columnCount}}"
     rowHeight="2:1">
 
-    <mat-grid-tile>
+    <mat-grid-tile rowspan="2">
       <img
         src="/assets/hillpicture.jpg"
         alt="Ben sat on a small hill with his dog" />
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+
+      <p>bio section</p>
+
     </mat-grid-tile>
 
   </mat-grid-list>
