--- a/web-portfolio-2024/src/app/main-page/bio/bio.component.scss
+++ b/web-portfolio-2024/src/app/main-page/bio/bio.component.scss
@@ -1,5 +1,55 @@
 
 section#bio {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  mat-grid-list {
+    width: 70%;
+
+    &.single-column {
+      width: 95%;
+
+      mat-grid-tile {
+        h2 {
+          font-size: min(10vw, 3.25rem);
+        }
+
+        p {
+          font-size: min(5vw, 1.5rem);
+        }
+      }
+    }
+
+    mat-grid-tile {
+      ::ng-deep .mat-grid-tile-content {
+        display: flex;
+        flex-direction: column;
+      }
+
+      #occupation-container, #technologies-container {
+        text-align: center;
+
+        * {
+          margin: 0;
+        }
+      }
+
+      h2 {
+        font-size: min(4vw, 3.5rem);
+      }
+
+      p {
+        font-size: min(2.5vw, 2rem);
+      }
+
+      img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
+  }
+
   img {
     width: 100%;
     height: 100%;
