--- a/web-portfolio-2024/src/app/main-page/bio/bio.component.html
+++ b/web-portfolio-2024/src/app/main-page/bio/bio.component.html
@@ -12,9 +12,28 @@
         alt="Ben sat on a small hill with his dog" />
     </mat-grid-tile>
 
-    <mat-grid-tile>
+    <mat-grid-tile rowspan="2">
 
-      <p>bio section</p>
+      <p>
+        I am an autistic Software Engineer passionate
+        about Angular, C# and Rust.
+        I'm interested in the whole project lifestyle
+        from inception through full-stack devleopment
+        to deployment.
+      </p>
+
+      <p>
+        Also interested in
+        Electrical Engineering,
+        Psychology,
+        Philosophy,
+        Language,
+        History,
+        Formula 1,
+        Storytelling,
+        Video Games,
+        Teaching.
+      </p>
 
     </mat-grid-tile>
 
