--- a/web-portfolio-2024/src/app/main-page/bio/bio.component.html
+++ b/web-portfolio-2024/src/app/main-page/bio/bio.component.html
@@ -14,6 +14,8 @@
 
     <mat-grid-tile rowspan="2">
 
+      <h2>Bio</h2>
+
       <p>
         I am an autistic Software Engineer passionate
         about Angular, C# and Rust.
