--- a/web-portfolio-2024/src/app/main-page/bio/bio.component.html
+++ b/web-portfolio-2024/src/app/main-page/bio/bio.component.html
@@ -25,6 +25,12 @@
       </p>
 
       <p>
+        I'd like to work on Web-, Desktop-, Mobile- and
+        Game development. Hardware isn't my main focus,
+        but I'd like to work with it to some degree as well.
+      </p>
+
+      <p>
         Also interested in
         Electrical Engineering,
         Psychology,
